// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) change-order (a record) 1`] = `
{
  "lines": 1413,
  "sha256": "d57256dfee3a5644908e7f7b91bc98b3850c5e08a1937fc1d5f339fe5217530f",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) change-order (project only) 1`] = `
{
  "lines": 1025,
  "sha256": "4cf79c50679be46b611bbbc49ac1218f8639c964ff2331173f21b607a088b668",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (a record) 1`] = `
{
  "lines": 1015,
  "sha256": "c27be537fa84cc4872ef26eb728ec0224d402c0055bf3b4bea0a6c0bd6192bb3",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (project only) 1`] = `
{
  "lines": 1025,
  "sha256": "e2f7005c4d7baff522be2a734a1eb930990fe7a9ff7b1f3d993c5d5b15574e42",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (the tutorial route, type=progress) 1`] = `
{
  "lines": 1036,
  "sha256": "8779e4ecc192fe4fe2b16bfc7a4d470bcf941581b0e9a8e9213de176081b940c",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) rfi (a record) 1`] = `
{
  "lines": 863,
  "sha256": "27cdbc99233561f467473c84e934856dc0caf907c2c2523769321a6e78e9786a",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) rfi (project only: the create form) 1`] = `
{
  "lines": 746,
  "sha256": "a887dafc50b7d8a20196c166477ec917d478d7ad1e65d4300b6f796c838e14c9",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) submittal (a record) 1`] = `
{
  "lines": 807,
  "sha256": "bd8b33550e1caed4c96cdb8beac2ca29b5728831a040fcb901a96d6f733cfbdf",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) submittal (project only) 1`] = `
{
  "lines": 726,
  "sha256": "b68d467bfe5fd5a9dfc90fed1ac55372524ada8e48a5cfd27d958cda75a41e41",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (approved credit: the bill bar says why) 1`] = `
{
  "lines": 991,
  "sha256": "b806ee437fa9af8df5a9a16c163f861a076bbdf32f8a1dd22accf8b09eb568ad",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (approved, billable: the bill bar) 1`] = `
{
  "lines": 1003,
  "sha256": "8127e1e9cedc2dbcbeaa6a02c71905603a46f676159467b3fc11b4c9bb3fc438",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (rejected: locked, no bar) 1`] = `
{
  "lines": 997,
  "sha256": "a1a161b45a4a166de6fa12a083478f5331af9a094d76df99f82215eafc08da02",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) invoice (sent: reminder and pay link) 1`] = `
{
  "lines": 1010,
  "sha256": "e6fe6628b0a28d69cc948c1296dcd923480bcb0a893fea40be58545bc9a9de3a",
}
`;
